@@ -14,22 +14,12 @@
 
 #define GETTEXT_DOMAIN "wesnoth-test"
 
-#include <boost/version.hpp>
 
 #define BOOST_TEST_MODULE wesnoth unit tests master suite
-#if BOOST_VERSION < 103400
-#include <boost/test/auto_unit_test.hpp>
-#else
 #include <boost/test/unit_test.hpp>
-#endif
 #include <boost/test/unit_test_monitor.hpp>
 #include <boost/test/detail/unit_test_parameters.hpp>
 #include <boost/test/results_reporter.hpp>
-
-#if BOOST_VERSION < 103400
-#include <boost/test/unit_test_log.hpp>
-#include <boost/scoped_ptr.hpp>
-#endif
 
 #include "SDL.h"
 
@@ -90,29 +80,6 @@ struct wesnoth_global_fixture {
 		SDL_Quit();
 	}
 };
-
-#if BOOST_VERSION < 103400
-#include <boost/test/auto_unit_test.hpp>
-
-#define BOOST_GLOBAL_FIXTURE(name)\
-boost::scoped_ptr<name> global_fix;\
-boost::unit_test::test_suite*\
-init_unit_test_suite( int argc, char* argv[] ) { \
-    boost::unit_test::auto_unit_test_suite_t* master_test_suite = boost::unit_test::auto_unit_test_suite();\
-\
-    boost::unit_test::const_string new_name = boost::unit_test::const_string( BOOST_STRINGIZE(BOOST_TEST_MODULE) );\
-\
-    if( !new_name.is_empty() )\
-        boost::unit_test::assign_op( master_test_suite->p_name.value, new_name, 0 );\
-\
-    master_test_suite->argc = argc;\
-    master_test_suite->argv = argv;\
-\
-	global_fix.reset(new name());\
-    return master_test_suite;\
-}
-
-#endif
 
 BOOST_GLOBAL_FIXTURE(wesnoth_global_fixture)
 
